fix widget-controls icons vertical align

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1040,8 +1040,12 @@
     }
 
     > .glyphicon{
-      vertical-align: -1px;
+      vertical-align: 0;
       font-size: 12px;
+    }
+
+    > .fa{
+      vertical-align: 1px;
     }
   }
 
